<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/txt_title_test_section"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:orientation="horizontal">

        <ToggleButton
            android:textOn="@null"
            android:textOff="@null"
            android:id="@+id/btn_mada"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="马达" />

        <ToggleButton
            android:textOn="@null"
            android:textOff="@null"
            android:id="@+id/btn_led"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="LED" />

        <ToggleButton
            android:textOn="加热片 打开"
            android:textOff="加热片 关闭"
            android:id="@+id/btn_hot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="加热片" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:orientation="horizontal">

        <Button
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="@string/txt_title_test_section" />

        <Button
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="@string/txt_title_test_section" />

        <Button
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="@string/txt_title_test_section" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/txt_title_write_number"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_jin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="@string/txt_title_test_write_jin" />

        <Button
            android:id="@+id/btn_mu"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="@string/txt_title_test_write_mu" />

        <Button
            android:id="@+id/btn_shui"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="@string/txt_title_test_write_shui" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_huo"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="@string/txt_title_test_write_huo" />

        <Button
            android:id="@+id/btn_tu"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="@string/txt_title_test_write_tu" />

        <Button
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_section_selector"
            android:text="@string/txt_title_test_section" />

    </LinearLayout>

</LinearLayout>
